--- a/styles/_custom.css
+++ b/styles/_custom.css
@@ -7,7 +7,7 @@
   --third-alpha-color: rgba(255, 46, 99, 0.75);
   --white-color: #eeeeee;
   --white-alpha-color: rgba(238, 238, 238, 0.75);
-  --gray-light-color: #d7d8da;
+  --gray-light-color: #e9e9e9;
   --gray-color: #393e46;
   --gray-dark-color: #2e3238;
   --black-color: #222831;
@@ -15,8 +15,9 @@
   --link-color: #00adb5;
   --title-color: #222831;
   --text-color: #444;
+  --text-light-color:#eeeeee;
 
-  --font: 'Raleway', sans-serif;
+  font-family: 'Inter', sans-serif;
 
   --max-width: 1200px;
   --header-height: 4rem;
