--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,10 +5,15 @@
 @import url(_utilities.css);
 
 .header {
-  background-color: aqua;
+  background-color: var(--first-color);
+  color: var(--text-light-color);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+}
+
+.header a {
+  color: var(--text-light-color);
 }
 
 .stop__search {
@@ -21,28 +26,55 @@
 
 .stop-card {
   background-color: orangered;
-  width: 100%;
   padding: 0.5rem;
 }
 
 .stop-card__info {
-  background-color: yellow;
+  background-color: var(--gray-light-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.25rem;
+  padding: 0.25rem 2.5%;
+}
+.stop-card__info h2 {
+  font-size: 1.4rem;
+}
+.stop-card__info h4 {
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.stop-card__stop-number {
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 
 .stop-card__lines {
-  background-color: blue;
   display: flex;
   flex-direction: column;
+
+  padding: 0 15px;
   gap: 0.5rem;
   margin-top: 0.5rem;
 }
 .stop-card__line {
-  background-color: lightgreen;
-  display: flex;
-  justify-content: space-between;
+  border-bottom: thin solid var(--gray-light-color);
+  display: grid;
+  grid-template-columns: 50px 250px 70px;
   padding: 0.25rem;
+  align-items: stretch;
+}
+
+.line__label {
+  font-weight: 700;
+
+  color: var(--first-color);
+}
+
+.stop-card__container {
+  min-width: 400px;
+}
+
+.line__heading {
+  font-weight: 300;
 }
