--- a/styles/_utilities.scss
+++ b/styles/_utilities.scss
@@ -5,7 +5,7 @@
 }
 
 .bg-gray-light {
-  background-color: var(--gray-light-color);
+  background-color: $gray-light-color;
 }
 
 .box-shadow-1 {
@@ -19,14 +19,14 @@
   font-weight: bold;
   text-align: center;
   text-decoration: none;
-  color: var(--white-color);
-  background-color: var(--first-color);
+  color: $white-color;
+  background-color: $first-color;
 }
 
 .container {
   margin-left: auto;
   margin-right: auto;
-  max-width: var(--max-width);
+  max-width: $max-width;
 }
 
 .gray-scale {
@@ -50,7 +50,7 @@
 }
 
 .text-first-color {
-  color: var(--first-color);
+  color: $first-color;
 }
 
 .section {
@@ -58,13 +58,13 @@
 }
 
 .section-title {
-  border-top: thin solid var(--first-color);
-  border-bottom: thin solid var(--first-color);
+  border-top: thin solid $first-color;
+  border-bottom: thin solid $first-color;
   width: 250px;
   margin: 2rem auto;
   padding: 0.5rem 1rem;
   text-align: center;
-  color: var(--title-color);
+  color: $title-color;
 }
 
 /*SECTION----------------------------------------> MEDIA QUERIES*/
