--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,23 +1,276 @@
 /*SECTION----------------------------------------> IMPORTS */
-@import url(_components.css);
-@import url(_custom.css);
-@import url(_reset.css);
-@import url(_utilities.css);
+/*SECTION----------------------------------------> MENU */
+.menu {
+  position: fixed;
+  left: 0;
+  top: 3rem;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  opacity: 0;
+  -webkit-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+  pointer-events: none;
+  background-color: #222831;
+}
+
+.menu.is-active {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.menu a {
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: #00adb5;
+}
+
+.menu a:hover {
+  color: #eeeeee;
+  background-color: #00adb5;
+}
+
+.menu-btn {
+  outline: thin solid #00adb5;
+  border: 0;
+  cursor: pointer;
+  background-color: #00adb5;
+}
+
+.menu-btn svg {
+  fill: #eeeeee;
+  padding: 0.25rem;
+}
+
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  scroll-behavior: smooth;
+}
+
+*,
+*::after,
+*::before {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  overflow-x: hidden;
+  color: #444;
+}
+
+a {
+  color: #00adb5;
+  -webkit-transition: all 0.25s ease-out;
+  transition: all 0.25s ease-out;
+  text-decoration: none;
+}
+
+a:hover {
+  opacity: 0.75;
+}
+
+h1 {
+  margin: 0;
+  font-size: 2rem;
+}
+
+h2 {
+  margin: 0;
+  font-size: 1.75rem;
+}
+
+h3 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+h4 {
+  margin: 0;
+  font-size: 1.25rem;
+}
+
+h5 {
+  margin: 0;
+  font-size: 1rem;
+}
+
+h6 {
+  margin: 0;
+  font-size: 0.75rem;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+p {
+  line-height: 1.6;
+}
+
+.avatar {
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+}
+
+.bg-gray-light {
+  background-color: #e9e9e9;
+}
+
+.box-shadow-1 {
+  -webkit-box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
+          box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
+}
+
+.btn {
+  border-radius: 1rem;
+  font-size: 0.75rem;
+  padding: 0.5rem 1rem;
+  display: inline-block;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  color: #eeeeee;
+  background-color: #00adb5;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+}
+
+.gray-scale {
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
+}
+
+.none {
+  display: none;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-first-color {
+  color: #00adb5;
+}
+
+.section {
+  padding: 2rem 1rem;
+}
+
+.section-title {
+  border-top: thin solid #00adb5;
+  border-bottom: thin solid #00adb5;
+  width: 250px;
+  margin: 2rem auto;
+  padding: 0.5rem 1rem;
+  text-align: center;
+  color: #222831;
+}
+
+/*SECTION----------------------------------------> MEDIA QUERIES*/
+@media screen and (min-width: 1024px) {
+  .full-lg-screen {
+    width: 100%;
+    min-height: 100vh;
+  }
+  .text-lg-center {
+    text-align: center;
+  }
+  .text-lg-left {
+    text-align: left;
+  }
+  .text-lg-right {
+    text-align: right;
+  }
+}
 
 .header {
-  background-color: var(--first-color);
-  color: var(--text-light-color);
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  background-color: #00adb5;
+  color: #eeeeee;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  width: 100%;
+  height: 3rem;
+  padding: 0.25rem 1rem;
+  font-weight: bold;
+  font-size: 2rem;
 }
 
 .header a {
-  color: var(--text-light-color);
+  color: #eeeeee;
 }
 
-.stop__search {
-  background-color: pink;
+.header > .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.line__bimports {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.line__etas {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.line__etas div {
+  width: 75px;
+}
+
+.line__label {
+  font-weight: 700;
+  color: #00adb5;
+}
+
+.stop-card__container {
+  min-width: 400px;
+}
+
+.line__heading {
+  font-weight: 300;
 }
 
 .main {
@@ -30,15 +283,23 @@
 }
 
 .stop-card__info {
-  background-color: var(--gray-light-color);
+  background-color: #e9e9e9;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0.25rem 2.5%;
 }
+
 .stop-card__info h2 {
   font-size: 1.4rem;
 }
+
 .stop-card__info h4 {
   font-size: 1rem;
   font-weight: 400;
@@ -50,31 +311,33 @@
 }
 
 .stop-card__lines {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 0 15px;
   gap: 0.5rem;
   margin-top: 0.5rem;
 }
+
 .stop-card__line {
-  border-bottom: thin solid var(--gray-light-color);
+  border-bottom: thin solid #e9e9e9;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 50px 250px 70px;
+  -ms-grid-columns: 50px 250px 70px;
+      grid-template-columns: 50px 250px 70px;
   padding: 0.25rem;
-  align-items: stretch;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
 }
 
-.line__label {
-  font-weight: 700;
-
-  color: var(--first-color);
+.stop__search {
+  position: relative;
+  top: 3rem;
+  background-color: pink;
 }
-
-.stop-card__container {
-  min-width: 400px;
-}
-
-.line__heading {
-  font-weight: 300;
-}
+/*# sourceMappingURL=styles.css.map */
