--- a/styles/_utilities.scss
+++ b/styles/_utilities.scss
@@ -8,7 +8,7 @@
   background-color: $gray-light-color;
 }
 
-.box-shadow-1 {
+@mixin box-shadow-1 {
   box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
 }
 .btn {
@@ -35,6 +35,21 @@
 
 .none {
   display: none;
+}
+.hidden {
+  display: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(4px);
+  z-index: 100;
+  transition: all 0.5s;
 }
 
 .text-center {
