--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,6 +117,10 @@ img {
   height: auto;
 }
 
+input:focus {
+  outline: none;
+}
+
 p {
   line-height: 1.6;
 }
@@ -128,12 +132,7 @@ p {
 }
 
 .bg-gray-light {
-  background-color: #e9e9e9;
-}
-
-.box-shadow-1 {
-  -webkit-box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
-          box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
+  background-color: rgba(215, 216, 218, 0.75);
 }
 
 .btn {
@@ -161,6 +160,24 @@ p {
 
 .none {
   display: none;
+}
+
+.hidden {
+  display: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  z-index: 100;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .text-center {
@@ -213,7 +230,8 @@ p {
 .header {
   background-color: #00adb5;
   color: #eeeeee;
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   left: 0;
   top: 0;
   z-index: 999;
@@ -265,10 +283,6 @@ p {
   color: #00adb5;
 }
 
-.stop-card__container {
-  min-width: 400px;
-}
-
 .line__heading {
   font-weight: 300;
 }
@@ -278,12 +292,15 @@ p {
 }
 
 .stop-card {
-  background-color: orangered;
   padding: 0.5rem;
 }
 
+.stop-card__container {
+  min-width: 300px;
+}
+
 .stop-card__info {
-  background-color: #e9e9e9;
+  background-color: rgba(238, 238, 238, 0.75);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -324,7 +341,7 @@ p {
 }
 
 .stop-card__line {
-  border-bottom: thin solid #e9e9e9;
+  border-bottom: thin solid rgba(215, 216, 218, 0.75);
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 50px 250px 70px;
@@ -336,8 +353,20 @@ p {
 }
 
 .stop__search {
-  position: relative;
-  top: 3rem;
-  background-color: pink;
+  padding: 0.5rem;
+  padding-bottom: 1.25rem;
+  background-color: rgba(238, 238, 238, 0.75);
+}
+
+.stop__search input {
+  -webkit-box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
+          box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
+  margin-top: 0.5rem;
+  width: 100%;
+  border-radius: 0.25rem;
+  border: thin solid rgba(215, 216, 218, 0.75);
+  font-size: 1rem;
+  padding: 0.25rem;
+  color: #444;
 }
 /*# sourceMappingURL=styles.css.map */
