--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,7 +7,7 @@
 .header {
   background-color: $first-color;
   color: $text-light-color;
-  position: fixed;
+  position: sticky;
   left: 0;
   top: 0;
   z-index: 999;
@@ -47,10 +47,6 @@
   color: $first-color;
 }
 
-.stop-card__container {
-  min-width: 400px;
-}
-
 .line__heading {
   font-weight: 300;
 }
@@ -60,23 +56,26 @@
 }
 
 .stop-card {
-  background-color: orangered;
   padding: 0.5rem;
 }
 
+.stop-card__container {
+  min-width: 300px;
+}
+
 .stop-card__info {
-  background-color: $gray-light-color;
+  background-color: $white-alpha-color;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0.25rem 2.5%;
-}
-.stop-card__info h2 {
-  font-size: 1.4rem;
-}
-.stop-card__info h4 {
-  font-size: 1rem;
-  font-weight: 400;
+  h2 {
+    font-size: 1.4rem;
+  }
+  h4 {
+    font-size: 1rem;
+    font-weight: 400;
+  }
 }
 
 .stop-card__stop-number {
@@ -101,7 +100,18 @@
 }
 
 .stop__search {
-  position: relative;
-  top: $header-height;
-  background-color: pink;
+  padding: 0.5rem;
+  padding-bottom: 1.25rem;
+  background-color: $white-alpha-color;
+
+  input {
+    @include box-shadow-1;
+    margin-top: 0.5rem;
+    width: 100%;
+    border-radius: 0.25rem;
+    border: thin solid $gray-light-color;
+    font-size: 1rem;
+    padding: 0.25rem;
+    color: $text-color;
+  }
 }
