feat: map added

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -83,3 +83,8 @@
     transform: translateY(-0.3rem);
   }
 }
+//SECTION----------------------------------------> MAP
+#map {
+  height: 180px;
+}
+
