--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,6 +107,10 @@
           transform: translateY(-0.3rem);
 }
 
+#map {
+  height: 180px;
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -180,6 +184,11 @@ input:focus {
 
 p {
   line-height: 1.6;
+}
+
+svg {
+  width: 24px;
+  height: 24px;
 }
 
 .avatar {
@@ -428,5 +437,13 @@ p {
   padding: 0.25rem 0.75rem;
   color: transparent;
   text-shadow: 0 0 0 #444;
+}
+
+.icon_bus path {
+  fill: #222831;
+}
+
+#map {
+  height: 300px;
 }
 /*# sourceMappingURL=styles.css.map */
