feat: add stops popups

--- a/styles/sass/_custom.scss
+++ b/styles/sass/_custom.scss
@@ -11,7 +11,7 @@ $white-color: #eeeeee;
 $white-alpha-color: rgba(238, 238, 238, 0.25);
 
 $gray-color: #393e46;
-$gray-light-color: rgba(215, 216, 218, 0.25);
+$gray-alpha-color: rgba(215, 216, 218, 0.25);
 $gray-dark-color: #2e3238;
 
 $black-color: #222831;
