--- a/styles/sass/_utilities.scss
+++ b/styles/sass/_utilities.scss
@@ -1,3 +1,5 @@
+@import 'custom';
+
 .avatar {
   border-radius: 50%;
   width: 150px;
@@ -5,13 +7,14 @@
 }
 
 .bg-gray-light {
-  background-color: $gray-light-color;
+  background-color: $gray-alpha-color;
 }
 
 @mixin box-shadow-1 {
   box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
 }
 .btn {
+  border: none;
   border-radius: 1rem;
   font-size: 0.75rem;
   padding: 0.5rem 1rem;
@@ -21,12 +24,27 @@
   text-decoration: none;
   color: $white-color;
   background-color: $first-color;
+  &:hover {
+    background-color: $third-color;
+    cursor: pointer;
+  }
 }
 
 .container {
   margin-left: auto;
   margin-right: auto;
   max-width: $max-width;
+}
+
+.expandable {
+  height: 0;
+  transition: all 2s ease-in-out;
+  display: none;
+}
+
+.expandable:target {
+  display: block;
+  height: $header-height * 2;
 }
 
 .gray-scale {
@@ -48,7 +66,7 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(4px);
-  z-index: 100;
+  z-index: 999;
   transition: all 0.5s;
 }
 
