--- a/styles/sass/_components.scss
+++ b/styles/sass/_components.scss
@@ -89,17 +89,17 @@
 }
 
 //SECTION----------------------------------------> OPTIONS ASIDE
+
 .options-result {
   position: fixed;
   left: 0;
   bottom: 0;
   margin-top: 2rem;
+  width: 100vw;
   display: flex;
   justify-content: space-around;
   background-color: $first-color;
   color: white;
-  height: $header-height * 0.75;
-  width: 100%;
   z-index: 500;
   gap: 0;
   .btn {
