--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -343,7 +343,7 @@ svg {
   left: 0;
   top: 0;
   z-index: 9999;
-  width: 100%;
+  width: 100vw;
   height: 3rem;
   padding: 0.25rem 1rem;
   font-weight: bold;
