--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -11,7 +11,7 @@
   left: 0;
   top: 0;
   z-index: 9999;
-  width: 100%;
+  width: 100vw;
   height: $header-height;
   padding: 0.25rem 1rem;
   font-weight: bold;
