--- a/styles/sass/_utilities.scss
+++ b/styles/sass/_utilities.scss
@@ -33,7 +33,7 @@
 .container {
   margin-left: auto;
   margin-right: auto;
-  max-width: $max-width;
+  // max-width: $max-width;
 }
 
 .expandable {
