--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -578,12 +578,19 @@ svg {
   text-shadow: 0 0 0 #444;
 }
 
+@media screen and (min-width: 768px) {
+  .stop__search {
+    margin-top: 3rem;
+  }
+  .stop-card__info {
+    margin-top: 0;
+    top: 0;
+  }
+}
 @media screen and (min-width: 1024px) {
   .stop__search {
     margin-top: 0;
   }
-}
-@media screen and (min-width: 1024px) {
   .overlay {
     display: none;
   }
@@ -629,4 +636,42 @@ svg {
     padding: 1.25rem 1rem;
     text-align: left;
   }
+}
+.fav__container {
+  max-width: 700px;
+  padding: 1rem;
+}
+
+.fav__results {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+
+.fav__item {
+  box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
+  width: 100%;
+  padding: 0.25rem;
+  display: flex;
+  gap: 2rem;
+  background-color: rgba(215, 216, 218, 0.25);
+  border-radius: 0.25rem;
+}
+.fav__item h4 {
+  width: 75px;
+  text-align: center;
+  align-self: center;
+}
+.fav__item aside {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+.fav__item aside p {
+  margin: 0;
+}
+.fav__item aside .item__lines {
+  display: flex;
+  gap: 0.5rem;
 }/*# sourceMappingURL=styles.css.map */
