--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -237,6 +237,8 @@
 }
 
 .fav__item {
+  justify-content: space-between;
+
   @include box-shadow-1;
   width: 100%;
   padding: 0.25rem;
@@ -244,21 +246,38 @@
   gap: 2rem;
   background-color: $gray-alpha-color;
   border-radius: 0.25rem;
+  min-height: $header-height * 1.75;
+  vertical-align: middle;
   h4 {
     width: 75px;
     text-align: center;
     align-self: center;
   }
   aside {
+    flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 0.25rem;
+    justify-content: space-between;
     p {
       margin: 0;
     }
     .item__lines {
       display: flex;
       gap: 0.5rem;
+      flex-wrap: wrap;
     }
   }
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.item__delete {
+  border-radius: 0.25rem;
+  width: $header-height * 1.75;
+  background-color: $third-color;
+  text-align: center;
+  color: $white-color;
+  font-weight: 800;
+  font-size: 4rem;
 }
