--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -566,7 +566,7 @@ svg {
   margin-top: 3rem;
 }
 .stop__search input {
-  box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.2);
   margin-top: 0.5rem;
   width: 100%;
   border-radius: 0.25rem;
@@ -651,7 +651,7 @@ svg {
 
 .fav__item {
   justify-content: space-between;
-  box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0.2rem 0.2rem 1rem rgba(0, 0, 0, 0.2);
   width: 100%;
   padding: 0.25rem;
   display: flex;
@@ -682,14 +682,20 @@ svg {
 }
 .fav__item:hover {
   cursor: pointer;
+  transform: scale(1.005);
 }
 
 .item__delete {
   border-radius: 0.25rem;
-  width: 5.25rem;
-  background-color: #ff2e63;
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 0.1rem;
+  background-color: rgba(255, 46, 99, 0.6);
   text-align: center;
   color: #eeeeee;
   font-weight: 800;
-  font-size: 4rem;
+  font-size: rem;
+}
+.item__delete:hover {
+  background-color: #ff2e63;
 }/*# sourceMappingURL=styles.css.map */
