--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -269,15 +269,21 @@
   }
   &:hover {
     cursor: pointer;
+    transform: scale(1.005);
   }
 }
 
 .item__delete {
   border-radius: 0.25rem;
-  width: $header-height * 1.75;
-  background-color: $third-color;
+  width: $header-height * 0.5;
+  height: $header-height * 0.5;
+  padding: 0.1rem;
+  background-color: $third-alpha-color;
   text-align: center;
   color: $white-color;
   font-weight: 800;
-  font-size: 4rem;
+  font-size: rem;
+  &:hover {
+    background-color: $third-color;
+  }
 }
