--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -225,8 +225,10 @@
 }
 
 .fav__container {
+  margin-top: $header-height;
   max-width: 700px;
   padding: 1rem;
+  min-width: 400px;
 }
 
 .fav__results {
