--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -14,6 +14,7 @@
   width: 100vw;
   height: $header-height;
   padding: 0.25rem 1rem;
+  padding-right: 2rem;
   font-weight: bold;
   font-size: 2rem;
   display: flex;
@@ -288,4 +289,8 @@
   &:hover {
     background-color: $third-color;
   }
+}
+
+#parada {
+  scroll-margin-top: $header-height;
 }
